[gd_scene load_steps=16 format=1]

[ext_resource path="res://entities/player/player.gd" type="Script" id=1]
[ext_resource path="res://entities/player/player.tex" type="Texture" id=2]
[ext_resource path="res://entities/player/Trail.tscn" type="PackedScene" id=3]
[ext_resource path="res://entities/player/player_radar.gd" type="Script" id=4]
[ext_resource path="res://entities/player/explosion.wav" type="Sample" id=5]
[ext_resource path="res://entities/player/player_ui.gd" type="Script" id=6]
[ext_resource path="res://game_over.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://entities/player/Spawn.tscn" type="PackedScene" id=8]
[ext_resource path="res://components/Gun/Gun.tscn" type="PackedScene" id=9]
[ext_resource path="res://components/ShipMovement/ShipMovement.tscn" type="PackedScene" id=10]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 32.0

[sub_resource type="ColorRamp" id=6]

offsets = FloatArray( 0.753623, 1 )
colors = ColorArray( 0.534058, 0.976563, 0.955821, 1, 0.902344, 0.56749, 0.56749, 0 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 20.0

[sub_resource type="SampleLibrary" id=5]

samples/explosion = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 5 )
}

[sub_resource type="DynamicFont" id=4]

font/size = 100
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 7 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]

z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 0, 5 )
z/z = 2
texture = ExtResource( 2 )

[node name="Particles2D" parent="Sprite" instance=ExtResource( 3 )]

color/color_ramp = SubResource( 6 )

[node name="Hurtbox" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 2 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]

shape = SubResource( 2 )
trigger = false
_update_shape_index = 0

[node name="Radar" type="Node2D" parent="."]

script/script = ExtResource( 4 )

[node name="SamplePlayer2D" type="SamplePlayer2D" parent="."]

params/volume_db = 0.0
params/pitch_scale = 1.0
params/attenuation/min_distance = 1.0
params/attenuation/max_distance = 2048.0
params/attenuation/distance_exp = 1.0
config/polyphony = 3
config/samples = SubResource( 5 )
config/pitch_random = 0.1

[node name="PlayerUI" type="Node2D" parent="."]

script/script = ExtResource( 6 )

[node name="Score" type="Label" parent="PlayerUI"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -311.0
margin/top = -142.0
margin/right = -120.0
margin/bottom = -85.0
custom_fonts/font = SubResource( 4 )
text = "0"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Spawn" parent="." instance=ExtResource( 8 )]

[node name="Gun" parent="." instance=ExtResource( 9 )]

bullet_scene_path = "res://entities/bullet/Bullet.tscn"
target_group = "enemy"
bullet_speed = 2000
rof = 6

[node name="ShipMovement" parent="." instance=ExtResource( 10 )]

max_movement_speed = 400
accel_amount = 900

[connection signal="body_enter" from="Hurtbox" to="." method="_on_Area2D_body_enter"]


